[package]
name = "geo-helper"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"

[dependencies]
wasm-bindgen = { version = "=0.2.95", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
geo = "0.29.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.45"
