[package]
name = "rs_lib"
version = "0.0.1"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"

[dependencies]
wasm-bindgen = { version = "=0.2.86", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.5.0"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
serde_derive = "1.0.180"
geo = "0.26.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.36"