[package]
name = "rs_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"

[dependencies]
wasm-bindgen = { version = "=0.2.92", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
geo = "0.28.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.41"
